# qyvo-ai

./: .gitignore  README.md  backend-client.ts  electron-builder.yml  electron.vite.config.ts  package-lock.json  package.json  tsconfig.node.json  tsconfig.web.json
backend/: main.py  main.spec  play.py  pyproject.toml  record.py
src/: types.d.ts
src/main/: index.ts
src/preload/: index.d.ts  index.ts
src/renderer/: index.html
src/renderer/src/: App.tsx
src/renderer/src/assets/: main.css
src/renderer/src/components/: ToggleTheme.tsx
src/renderer/src/components/motion-primitives/: text-shimmer.tsx
src/renderer/src/components/ui/: button.tsx  current-file-icon.tsx  dynamic-island.tsx  popover.tsx
src/renderer/src/ipc/: chat-agent-helpers.ts  context-exposer.ts  listeners-register.ts  theme-helper.ts  window-helper.ts
src/renderer/src/ipc/chat-agent/: chat-agent-channels.ts  chat-agent-context.ts  chat-agent-listeners.ts
src/renderer/src/ipc/theme/: theme-context.ts  theme-listeners.ts
src/renderer/src/ipc/window/: window-channels.ts  window-context.ts  window-listeners.ts
